[aspect-ratio] Treat border/padding correctly for box-sizing: border-box https://bugs.webkit.org/show_bug.cgi?id=225015

Patch by Rob Buis <rbuis@igalia.com> on 2021-04-28
Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Import WPT test for this.

* web-platform-tests/css/css-sizing/aspect-ratio/block-aspect-ratio-035-expected.xht: Added.
* web-platform-tests/css/css-sizing/aspect-ratio/block-aspect-ratio-035.html: Added.

Source/WebCore:

When computing logical height in aspect-ratio case, to compute the automatic
minimum size [1] for min-height: auto, the padding was always subtracted,
however it should only be subtracted in the box-sizing: content-box case.

Test: imported/w3c/web-platform-tests/css/css-sizing/aspect-ratio/block-aspect-ratio-035.html

[1] https://www.w3.org/TR/css-sizing-4/#aspect-ratio-minimum

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeLogicalHeight const):

Canonical link: https://commits.webkit.org/237145@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276745 268f45cc-cd09-0410-ab3c-d52691b4dbfc